higher-contrast set logos

--- a/src/data/grammar/images/tournaments/mtg-tournament-winners.yaml
+++ b/src/data/grammar/images/tournaments/mtg-tournament-winners.yaml
@@ -5,6 +5,8 @@ mtgTournamentWinners:
 - "#mtgTournamentWinnersPro#"
 - "#mtgTournamentWinnersTeam#"
 
+### pros
+
 mtgTournamentPhotoDir: "./src/data/images/tournaments/winners/pros"
 
 mtgTournamentWinnersPro: "#mtgTournamentWinnersPros#[_mtgTournamentPhotoSrc:#mtgTournamentPhotoDir#/#_tournamentPhoto#][_s:][_winnerNameProtagonist:#_winnerName#][_opposition:#pro#,#person#,#miscPersonSingular#]"
