update recent sets list; snazzier spellslinger logo

--- a/src/data/grammar/images/tournaments/mtg-tournament-logo.yaml
+++ b/src/data/grammar/images/tournaments/mtg-tournament-logo.yaml
@@ -33,8 +33,10 @@ _tournamentImagesProTour: "[_tournamentType:Pro Tour][_tournamentTypeSrc:#_tourn
 
 _tournamentInitTournamentName:
 - "#teaserCardSet#"
+- "#teaserCardSet#"
 - "#recentCardSet#"
-- "#novelCardSetName#"
+- "#recentCardSet#"
+- "#standardCardSet#"
 - "#randomCardSet#"
 
 _tournamentInit:
