--- a/src/data/grammar/images/mtg-set-logo.yaml
+++ b/src/data/grammar/images/mtg-set-logo.yaml
@@ -87,6 +87,13 @@ setLogoFont:
   - "Warmonger BB[_cardset:#_cardset.allCaps#][_setLogoFontSize:96][_setLogoStrokeWidth:2][_setLogoFontWeight:bold][_setLogoLineHeight:86][_setLogoBaseline:top][_mtgSetLogoMaxWidth:800px][_mtgSetLogoPaddingTop:4px][_setLogoAdditionalStyles:#_setLogoCustomStyleGradient#,#_setLogoCustomStyleTexturedGradient#]"
   - "The Wild Breath of Zelda[_cardset:#_cardset.allCaps#][_setLogoFontSize:100][_setLogoStrokeWidth:4][_setLogoFontWeight:normal][_setLogoLineHeight:90][_mtgSetLogoPaddingTop:6px][_setLogoBaseline:middle][_setLogoAdditionalStyles:#_setLogoCustomStyleTextured#]"
   - "The Wild Breath of Zelda[_cardset:#_cardset.allCaps#][_setLogoFontSize:100][_setLogoStrokeWidth:2][_setLogoFontWeight:normal][_setLogoLineHeight:90][_mtgSetLogoPaddingTop:6px][_setLogoBaseline:middle][_setLogoAdditionalStyles:#_setLogoCustomStyleGradient#,#_setLogoCustomStyleTexturedGradient#]"
+  - "Chuck Noon[_cardset:#_cardset.allCaps#][_setLogoFontSize:92][_setLogoStrokeWidth:2][_setLogoFontWeight:normal][_setLogoLineHeight:84][_mtgSetLogoPaddingTop:6px][_setLogoBaseline:middle][_setLogoAdditionalStyles:#_setLogoCustomStyleTextured#]"
+  - "Chuck Noon[_cardset:#_cardset.allCaps#][_setLogoFontSize:92][_setLogoStrokeWidth:2][_setLogoFontWeight:normal][_setLogoLineHeight:84][_mtgSetLogoPaddingTop:6px][_setLogoBaseline:middle][_setLogoAdditionalStyles:#_setLogoCustomStyleGradient#,#_setLogoCustomStyleTexturedGradient#]"
+
+setLogoFontTest:
+  - "Chuck Noon[_cardset:#_cardset.allCaps#][_setLogoFontSize:92][_setLogoStrokeWidth:2][_setLogoFontWeight:normal][_setLogoLineHeight:84][_mtgSetLogoPaddingTop:6px][_setLogoBaseline:middle][_setLogoAdditionalStyles:#_setLogoCustomStyleTextured#]"
+  - "Chuck Noon[_cardset:#_cardset.allCaps#][_setLogoFontSize:92][_setLogoStrokeWidth:2][_setLogoFontWeight:normal][_setLogoLineHeight:84][_mtgSetLogoPaddingTop:6px][_setLogoBaseline:middle][_setLogoAdditionalStyles:#_setLogoCustomStyleGradient#,#_setLogoCustomStyleTexturedGradient#]"
+
 
 _forceHighContrastText: "[_setLogoFontColorSet:#_setLogoFontColorSetHighContrast#]"
 _forceUpperCase: "text-transform#colon# uppercase;"
@@ -135,7 +142,7 @@ _setLogoCustomStyleTexturedGradient:
 _setLogoCustomStyleItalicized:
   - "font-style: italic;"
 _setLogoFont:
-  - "[#_resetLogoAdditionalStyles#][#_setLogoFontColorSet#][_setLogoFontFace:#setLogoFont#]"
+  - "[#_resetLogoAdditionalStyles#][#_setLogoFontColorSet#][_setLogoFontFace:#setLogoFontTest#]"
 
 _setLogoStylesAlign: "center"
 
