--- a/src/data/grammar/images/mtg-set-logo.yaml
+++ b/src/data/grammar/images/mtg-set-logo.yaml
@@ -89,12 +89,17 @@ setLogoFont:
   - "The Wild Breath of Zelda[_cardset:#_cardset.allCaps#][_setLogoFontSize:100][_setLogoStrokeWidth:2][_setLogoFontWeight:normal][_setLogoLineHeight:90][_mtgSetLogoPaddingTop:6px][_setLogoBaseline:middle][_setLogoAdditionalStyles:#_setLogoCustomStyleGradient#,#_setLogoCustomStyleTexturedGradient#]"
   - "Chuck Noon[_cardset:#_cardset.allCaps#][_setLogoFontSize:92][_setLogoStrokeWidth:2][_setLogoFontWeight:normal][_setLogoLineHeight:84][_mtgSetLogoPaddingTop:6px][_setLogoBaseline:middle][_setLogoAdditionalStyles:#_setLogoCustomStyleTextured#]"
   - "Chuck Noon[_cardset:#_cardset.allCaps#][_setLogoFontSize:92][_setLogoStrokeWidth:2][_setLogoFontWeight:normal][_setLogoLineHeight:84][_mtgSetLogoPaddingTop:6px][_setLogoBaseline:middle][_setLogoAdditionalStyles:#_setLogoCustomStyleGradient#,#_setLogoCustomStyleTexturedGradient#]"
+  - "Kamikaze[_cardset:#_cardset.allCaps#][_setLogoFontSize:92][_setLogoStrokeWidth:2][_setLogoFontWeight:normal][_setLogoLineHeight:76][_mtgSetLogoPaddingTop:6px][_setLogoBaseline:middle][_setLogoAdditionalStyles:#_setLogoCustomStyleTexturedGradient#]"
+  - "Advantage[_cardset:#_cardset.allCaps#][_setLogoFontSize:92][_setLogoStrokeWidth:3][_setLogoFontWeight:normal][_setLogoLineHeight:76][_mtgSetLogoPaddingTop:6px][_setLogoBaseline:middle][_setLogoAdditionalStyless:#_setLogoCustomStyleTextured#,#_setLogoCustomStyleGradient#,#_setLogoCustomStyleTexturedGradient#]"
+  - "Deadhead Rough[_setLogoFontSize:92][_setLogoStrokeWidth:2][_setLogoFontWeight:normal][_setLogoLineHeight:80][_mtgSetLogoPaddingTop:0px][_setLogoBaseline:middle][_setLogoAdditionalStyles:#_setLogoCustomStyleTextured#,#_setLogoCustomStyleGradient#,#_setLogoCustomStyleTexturedGradient#]"
+  - "Destroy Earth BB[_cardset:#_cardset.allCaps#][_setLogoFontSize:96][_setLogoStrokeWidth:2][_setLogoFontWeight:normal][_setLogoLineHeight:76][_mtgSetLogoPaddingTop:6px][_setLogoBaseline:middle][_setLogoAdditionalStyles:#_setLogoCustomStyleTextured#,#_setLogoCustomStyleGradient#,#_setLogoCustomStyleTexturedGradient#]"
+  - "Mucha Wo Minagara Milk tea[_cardset:#_cardset.allCaps#][_setLogoFontSize:96][_setLogoStrokeWidth:2][_setLogoFontWeight:normal][_setLogoLineHeight:76][_mtgSetLogoPaddingTop:6px][_setLogoBaseline:middle][_setLogoAdditionalStyles:#_setLogoCustomStyleTextured#,#_setLogoCustomStyleGradient#,#_setLogoCustomStyleTexturedGradient#]"
+  - "Mayor[_cardset:#_cardset.allCaps#][_setLogoFontSize:92][_setLogoStrokeWidth:2][_setLogoFontWeight:normal][_setLogoLineHeight:78][_mtgSetLogoPaddingTop:6px][_setLogoBaseline:middle][_setLogoAdditionalStyles:#_setLogoCustomStyleTexturedGradient#]"
+  - "VTKS CHOICE[_cardset:#_cardset.allCaps#][_setLogoFontSize:102][_setLogoStrokeWidth:3][_setLogoFontWeight:normal][_setLogoLineHeight:110][_mtgSetLogoPaddingTop:6px][_setLogoBaseline:middle]"
 
 setLogoFontTest:
-  - "Chuck Noon[_cardset:#_cardset.allCaps#][_setLogoFontSize:92][_setLogoStrokeWidth:2][_setLogoFontWeight:normal][_setLogoLineHeight:84][_mtgSetLogoPaddingTop:6px][_setLogoBaseline:middle][_setLogoAdditionalStyles:#_setLogoCustomStyleTextured#]"
-  - "Chuck Noon[_cardset:#_cardset.allCaps#][_setLogoFontSize:92][_setLogoStrokeWidth:2][_setLogoFontWeight:normal][_setLogoLineHeight:84][_mtgSetLogoPaddingTop:6px][_setLogoBaseline:middle][_setLogoAdditionalStyles:#_setLogoCustomStyleGradient#,#_setLogoCustomStyleTexturedGradient#]"
-
-
+  - "Chuck Noon[_setLogoFontSize:92][_setLogoStrokeWidth:2][_setLogoFontWeight:normal][_setLogoLineHeight:84][_mtgSetLogoPaddingTop:6px][_setLogoBaseline:middle][_setLogoAdditionalStyles:#_setLogoCustomStyleTextured#]"
+  - "Chuck Noon[_setLogoFontSize:92][_setLogoStrokeWidth:2][_setLogoFontWeight:normal][_setLogoLineHeight:84][_mtgSetLogoPaddingTop:6px][_setLogoBaseline:middle][_setLogoAdditionalStyles:#_setLogoCustomStyleGradient#,#_setLogoCustomStyleTexturedGradient#]"
 _forceHighContrastText: "[_setLogoFontColorSet:#_setLogoFontColorSetHighContrast#]"
 _forceUpperCase: "text-transform#colon# uppercase;"
 
@@ -142,7 +147,7 @@ _setLogoCustomStyleTexturedGradient:
 _setLogoCustomStyleItalicized:
   - "font-style: italic;"
 _setLogoFont:
-  - "[#_resetLogoAdditionalStyles#][#_setLogoFontColorSet#][_setLogoFontFace:#setLogoFontTest#]"
+  - "[#_resetLogoAdditionalStyles#][#_setLogoFontColorSet#][_setLogoFontFace:#setLogoFont#]"
 
 _setLogoStylesAlign: "center"
 
