--- a/src/data/grammar/vocab/adjectives/adj-person-characteristic.yaml
+++ b/src/data/grammar/vocab/adjectives/adj-person-characteristic.yaml
@@ -201,7 +201,7 @@ adjPersonCharacteristicSuperlative:
 - most stouthearted
 - most chivalrous
 - clumsiest
-- less educated
+- least educated
 - most vulgar
 - most demented
 - most deranged
