--- a/src/data/grammar/vocab/adjectives/adj-person-characteristic.yaml
+++ b/src/data/grammar/vocab/adjectives/adj-person-characteristic.yaml
@@ -70,6 +70,7 @@ adjPersonCharacteristic:
 - talented
 - callow
 - callous
+- corrupt
 - "#adj#"
 - "#adjValue#"
 
@@ -142,6 +143,7 @@ adjPersonCharacteristicComparative:
 - more talented
 - more callow
 - more callous
+- more corrupt
 - "#adjComparative#"
 
 adjPersonCharacteristicSuperlative:
@@ -199,7 +201,7 @@ adjPersonCharacteristicSuperlative:
 - most stouthearted
 - most chivalrous
 - clumsiest
-- less educated
+- least educated
 - most vulgar
 - most demented
 - most deranged
@@ -213,4 +215,5 @@ adjPersonCharacteristicSuperlative:
 - most talented
 - most callow
 - most callous
+- most corrupt
 - "#adjSuperlative#"
